fix: list spacing

--- a/_sass/minimal-ryan/custom.scss
+++ b/_sass/minimal-ryan/custom.scss
@@ -184,4 +184,8 @@
     a {
         color: $tertiary-color;
     }
+
+    li {
+        padding: 4px 0;
+    }
 }
